GET/PUT user added
